# exfil

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
app/: README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/ui/: app.js  index.html  styles.css
crates/exfil-cli/: Cargo.toml
crates/exfil-cli/src/: graphql.rs  keymap.rs  main.rs  progress.rs  server.rs  tui.rs
crates/exfil-cli/tests/: cli.rs
crates/exfil-config/: Cargo.toml  config.toml
crates/exfil-config/src/: lib.rs  schema.rs
crates/exfil-core/: Cargo.toml
crates/exfil-core/src/: lib.rs  platform.rs
crates/exfil-engine/: Cargo.toml
crates/exfil-engine/src/: lib.rs  run.rs
crates/exfil-llm/: Cargo.toml
crates/exfil-llm/src/: lib.rs
crates/exfil-mcp/: Cargo.toml
crates/exfil-mcp/src/: lib.rs
crates/exfil-remote/: Cargo.toml  top-ports.txt
crates/exfil-remote/src/: lib.rs  netscan.rs  proc.rs  tcp.rs  web.rs  webdriver.rs
crates/exfil-report/: Cargo.toml
crates/exfil-report/src/: lib.rs
crates/exfil-scan/: Cargo.toml
crates/exfil-scan/src/: ast.rs  builtin.rs  cim.rs  clamav.rs  dns.rs  expand.rs  indicator.rs  ioc.rs  leak.rs  lib.rs  log.rs  netioc.rs  pii.rs  supply.rs  taint.rs  typosquat.rs  whois.rs  yara.rs
crates/exfil-script/: Cargo.toml
crates/exfil-script/src/: lib.rs
crates/exfil-source/: Cargo.toml
crates/exfil-source/src/: feed.rs  lib.rs  mitre.rs
crates/exfil-store/: Cargo.toml
crates/exfil-store/src/: lib.rs
crates/exfil-task/: Cargo.toml
crates/exfil-task/src/: lib.rs
crates/exfil-view/: Cargo.toml
crates/exfil-view/src/: lib.rs
crates/exfill-cli/: Cargo.toml
crates/exfill-cli/src/: main.rs  progress.rs  tui.rs
crates/exfill-cli/tests/: cli.rs
crates/exfill-config/: Cargo.toml  config.toml
crates/exfill-config/src/: lib.rs
crates/exfill-core/: Cargo.toml
crates/exfill-core/src/: lib.rs
crates/exfill-engine/: Cargo.toml
crates/exfill-engine/src/: lib.rs  run.rs
crates/exfill-llm/: Cargo.toml
crates/exfill-llm/src/: lib.rs
crates/exfill-mcp/: Cargo.toml
crates/exfill-mcp/src/: lib.rs
crates/exfill-remote/: Cargo.toml
crates/exfill-remote/src/: lib.rs  netscan.rs  proc.rs  tcp.rs  web.rs
crates/exfill-report/: Cargo.toml
crates/exfill-report/src/: lib.rs
crates/exfill-scan/: Cargo.toml
crates/exfill-scan/src/: ast.rs  builtin.rs  cim.rs  clamav.rs  dns.rs  expand.rs  indicator.rs  ioc.rs  leak.rs  lib.rs  log.rs  netioc.rs  pii.rs  supply.rs  taint.rs  typosquat.rs  whois.rs  yara.rs
crates/exfill-script/: Cargo.toml
crates/exfill-script/src/: lib.rs
crates/exfill-source/: Cargo.toml
crates/exfill-source/src/: lib.rs
crates/exfill-store/: Cargo.toml
crates/exfill-store/src/: lib.rs
crates/exfill-task/: Cargo.toml
crates/exfill-task/src/: lib.rs
crates/exfill-view/: Cargo.toml
crates/exfill-view/src/: lib.rs
datasets/: example.yar  gitleaks.json  iocs.example.json
docs/: PLAN.md  book.toml  tui.dia.autosave
docs/architecture/: README.md  ast.md  cli-tui.md  engine.md  integrations.md  overview.md  pipeline.md  rust-primer.md  scanners.md  store.md  taint.md
docs/src/: PLAN.md  SUMMARY.md  introduction.md
docs/src/architecture/: README.md  ast.md  cli-tui.md  cli.md  engine.md  integrations.md  overview.md  rust-primer.md  scanners.md  store.md  taint.md
docs/src/guide/: ci.md  commands.md  configuration.md  features.md  installation.md  quick-start.md  surfaces.md  tui.md
