# exfill — Extra File Lang Lookup
# Offline, cross-platform, plugin-based filesystem analysis & SAST engine.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rangertaha/exfill"

# Lint levels shared by every crate (each opts in with `[lints] workspace = true`).
[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
exfill-core = { path = "crates/exfill-core" }
exfill-config = { path = "crates/exfill-config" }
exfill-store = { path = "crates/exfill-store" }
exfill-scan = { path = "crates/exfill-scan" }
exfill-task = { path = "crates/exfill-task" }
exfill-source = { path = "crates/exfill-source" }
exfill-remote = { path = "crates/exfill-remote" }
exfill-report = { path = "crates/exfill-report" }
exfill-view = { path = "crates/exfill-view" }
exfill-mcp = { path = "crates/exfill-mcp" }
exfill-engine = { path = "crates/exfill-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
