# exfil — Extra File Lang Lookup
# Offline, cross-platform, plugin-based filesystem analysis & SAST engine.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rangertaha/exfil"

# Lint levels shared by every crate (each opts in with `[lints] workspace = true`).
[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
exfil-core = { path = "crates/exfil-core" }
exfil-config = { path = "crates/exfil-config" }
exfil-store = { path = "crates/exfil-store" }
exfil-scan = { path = "crates/exfil-scan" }
exfil-task = { path = "crates/exfil-task" }
exfil-source = { path = "crates/exfil-source" }
exfil-remote = { path = "crates/exfil-remote" }
exfil-report = { path = "crates/exfil-report" }
exfil-mcp = { path = "crates/exfil-mcp" }
exfil-llm = { path = "crates/exfil-llm" }
exfil-script = { path = "crates/exfil-script" }
exfil-engine = { path = "crates/exfil-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
