[package]
name = "exfil-desktop"
version = "0.1.0"
edition = "2021"
description = "exfil desktop app — runs the exfil server and shows the findings dashboard"
license = "MIT"

# Standalone workspace: keep this out of the parent Cargo workspace so
# `cargo build --workspace` / CI never tries to build the desktop app (which
# needs the Tauri toolchain and system webview).
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
