[package]
name = "exfil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "exfil"
path = "src/main.rs"

[dependencies]
exfil-core = { workspace = true }
exfil-config = { workspace = true }
exfil-store = { workspace = true }
exfil-scan = { workspace = true }
exfil-source = { workspace = true }
exfil-remote = { workspace = true }
exfil-task = { workspace = true }
exfil-engine = { workspace = true }
exfil-view = { workspace = true }
exfil-mcp = { workspace = true }
exfil-llm = { workspace = true }
exfil-script = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "signal", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
async-graphql = "7"
ratatui = "0.30"
crossterm = "0.28"
ciborium = "0.2"

[dev-dependencies]
blake3 = "1"
sha2 = "0.10"

[lints]
workspace = true
