[package]
name = "exfil-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfil-store = { workspace = true }
exfil-report = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util"] }

[dev-dependencies]
exfil-core = { workspace = true }

[lints]
workspace = true
