[package]
name = "exfil-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfil-engine = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
russh = "0.45"
russh-sftp = "2"
gethostname = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"

[lints]
workspace = true
