[package]
name = "exfil-source"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfil-core = { workspace = true }
exfil-scan = { workspace = true }
exfil-task = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
