[package]
name = "exfil-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfil-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = "1"
tokio = { workspace = true }
surrealdb = { version = "2", default-features = false, features = [
    "kv-surrealkv", # embedded on-disk (the default)
    "kv-mem",       # embedded in-memory (tests, ephemeral runs)
    "protocol-ws",  # connect to a remote SurrealDB server / cluster over ws(s)
    "protocol-http", # …or over http(s)
] }

[lints]
workspace = true
