[package]
name = "exfill-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "exfill"
path = "src/main.rs"

[dependencies]
exfill-core = { workspace = true }
exfill-config = { workspace = true }
exfill-store = { workspace = true }
exfill-scan = { workspace = true }
exfill-engine = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
blake3 = "1"

[lints]
workspace = true
