[package]
name = "exfill-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "exfill"
path = "src/main.rs"

[dependencies]
exfill-core = { workspace = true }
exfill-config = { workspace = true }
exfill-store = { workspace = true }
exfill-scan = { workspace = true }
exfill-source = { workspace = true }
exfill-remote = { workspace = true }
exfill-task = { workspace = true }
exfill-engine = { workspace = true }
exfill-view = { workspace = true }
exfill-mcp = { workspace = true }
exfill-llm = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ciborium = "0.2"

[dev-dependencies]
blake3 = "1"
sha2 = "0.10"

[lints]
workspace = true
