[package]
name = "exfill-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfill-core = { workspace = true }
exfill-store = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
