[package]
name = "exfill-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfill-engine = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
russh = "0.45"
russh-sftp = "2"
gethostname = "0.5"

[lints]
workspace = true
