[package]
name = "exfill-scan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfill-core = { workspace = true }
exfill-task = { workspace = true }
anyhow = { workspace = true }
regex = "1"
serde_json = { workspace = true }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
aho-corasick = "1"
yara-x = "0.13"

[lints]
workspace = true
