[package]
name = "exfill-scan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfill-core = { workspace = true }
exfill-task = { workspace = true }
anyhow = { workspace = true }
regex = "1"
serde_json = { workspace = true }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-powershell = "0.26"
tree-sitter-ruby = "0.23"
tree-sitter-dart = "0.2"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"
tree-sitter-groovy = "0.1"
tree-sitter-sequel = "0.3"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
aho-corasick = "1"
yara-x = "0.13"

[lints]
workspace = true
