[package]
name = "exfill-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exfill-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
surrealdb = { version = "2", default-features = false, features = ["kv-surrealkv"] }

[lints]
workspace = true
